--- a/about.Rmd
+++ b/about.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "About this site"
-description: |
-  Some additional details about the website
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+This is the course website for PLSC30500 at the University of Chicago. 
 
