--- a/slides/slides_12.Rmd
+++ b/slides/slides_12.Rmd
@@ -30,14 +30,66 @@ Typical stats sequences basically deal with model fitting and hyp testing only. 
 # Our plan (overview)
 
 - "Data science" first (weeks 1-2, every lab and homework)
-  - visualization on "tidied" data, then
+  - visualization on "tidied" data
   - learn to "tidy" our data
-- Then probability/stats essentials (week 3)
+- Probability/stats essentials (week 3)
 - Research design essentials: causality and experiments (week 4)
 - Regression (weeks 5 & 6) 
 - Inference (weeks 7 & 8)
 
 Cumulative -- please keep up.
+
+???
+
+Foregrounding "data science" skills, causality.
+
+---
+
+# Grammar of graphics 
+
+(no code yet)
+
+---
+
+# Example: gapminder graphic (?) 
+
+(no code yet)
+
+---
+
+# Example: Minard Grande Armée graphic (?)
+
+(no code yet)
+
+---
+
+# Structure of "tidy" data
+
+Observations in rows, each attribute has its own column
+
+Main task then is to tell `R` which columns should represent which attributes. 
+
+---
+
+
+
+# Getting data into `R` (and `RStudio`)
+
+An interaction option: `Import Dataset` button in `Environment` pane of `RStudio`
+
+--
+
+But note it's showing you the code it's using! 
+
+(Live coding example.)
+
+---
+
+# Digression about coding vs clicking
+
+
+
+
 
 
 <!-- ## Plan  -->
