updated slides and added some county pres data

--- a/slides/slides_21.Rmd
+++ b/slides/slides_21.Rmd
@@ -1,20 +1,24 @@
 ---
-title: "Data wrangling (session 2.1)"
+title: "Data wrangling (sessions 2.1 & 2.2)"
 output:
   xaringan::moon_reader:
-    css: [default, shinobi]
+    css: [default, robot, robot-fonts]
     nature:
       highlightStyle: atelier-lakeside-light
-      highlightLines: true
-      countIncrementalSlides: false
-    pandoc_args: ["--metadata-file=./common.yaml"]
+      highlightLines: yes
+      countIncrementalSlides: no
+    pandoc_args: --metadata-file=./common.yaml
 ---
 
 ```{r setup, include=FALSE}
 library(tidyverse)
 ```
 
-
+```{css, echo=FALSE}
+.small-output .remark-code{
+  font-size: x-small;
+}
+```
 
 # The big picture 
 
@@ -24,62 +28,20 @@ Components of a `ggplot`:
 - mapping of attributes to aesthetics (x, y, size, shape, color, transparency, etc)
 - geometric objects (`geom`s)
 
-Next: getting data into the right format for plotting (and analysis).
+Next: getting data ready for plotting (and analysis).
 
-
-
-# Workflow 
-
-1. **Data collection**: run survey, enter data from archive, etc
-1. **Data processing**: merge, recode, reshape, aggregate, etc
-1. **Data analysis**: visualization, model fitting, hypothesis testing, etc 
-
-???
-
-Typical stats sequences basically deal with model fitting and hyp testing only. But you spend ~ 90% of time on 1 and 2, and visualization is very important. So we're redressing this somewhat.
-
----
-
-# Our plan (overview)
-
-- "Data science" first (weeks 1-2, every lab and homework)
-  - visualization on "tidied" data
-  - learn to "tidy" our data
-- Probability/stats essentials (week 3)
-- Research design essentials: causality and experiments (week 4)
-- Regression (weeks 5 & 6) 
-- Inference (weeks 7 & 8)
-
-Cumulative -- please keep up.
-
-???
-
-Foregrounding "data science" skills, causality.
 
 ---
 
 class: inverse, middle, center
 
-# Toward a grammar of graphics
+# Getting data into `R`
 
 ---
-
-
-
-
-# Structure of "tidy" data
-
-Observations in rows, each attribute has its own column
-
-Main task then is to tell `R` which columns should represent which attributes. 
-
----
-
-
 
 # Getting data into `R` (and `RStudio`)
 
-An interaction option: `Import Dataset` button in `Environment` pane of `RStudio`
+An interactive option: `Import Dataset` button in `Environment` pane of `RStudio`
 
 --
 
@@ -89,12 +51,260 @@ But note it's showing you the code it's using!
 
 ---
 
-# Digression about coding vs clicking
+# Getting data into `R` (cont'd)
+
+Most commonly used functions: 
+
+- `read_csv()` and `read_rds()` in `readr` (`tidyverse`)
+- `readstata13::read.dta13()` for Stata files (`.dta`)
+- `readxl::read_excel()` for Excel files (`.xls`, `.xlsx`)
+- `load()` in base R for "R objects"
+
+All require "path" to file as argument. 
+
+--
+
+Sometimes data is a package, e.g. `babynames`, `gapminder`, `vdemdata` 
+
+--
+
+See Chapter 11 of R4DS and "Data Import" cheatsheet.
+
+---
+
+class: inverse, middle, center
+
+# Some key data wrangling tools: `select()`, `filter()`, `group_by()`, `summarize()`
+
+---
+
+# Load V-Dem dataset
+
+1. `install.packages("devtools")`
+1. `devtools::install_github("vdeminstitute/vdemdata")`
+1. `library(vdemdata)`
+
+```{r echo = F}
+library(vdemdata)
+```
 
 
+Now by typing `vdem` you can access the dataset.
+
+???
+
+NB: Maybe we should provide an alternative way to load in case their github goes down or something.
+
+---
+
+# Getting a feel for the data (1)
+
+`vdem` is big! 
+
+```{r}
+dim(vdem)
+```
+
+--
+
+Typing `vdem` is unenlightening; `View(vdem)` better but takes a while to load. 
+
+---
+
+#### Look at column names: 
+
+.small-output[
+```{r}
+names(vdem)  # colnames(vdem) also works
+```
+]
+
+---
 
 
+#### `tibble`s: better viewing
 
+<!-- see
+https://github.com/yihui/xaringan/issues/169
+for shortcut
+--> 
+
+.small-output[
+```{r}
+vdem %>% as_tibble()
+```
+]
+
+---
+
+### Pick out columns with `select()`
+
+```{r}
+vd <- as_tibble(vdem)
+vd %>% 
+  select(country_text_id, year, e_regionpol_6C, v2x_polyarchy, e_migdppc)
+```
+
+---
+
+
+### Pick out rows with `filter()`
+
+```{r}
+vd %>% 
+  select(country_text_id, year, e_regionpol_6C, v2x_polyarchy, e_migdppc) %>% 
+  filter(year == 2015) #<<
+```
+
+---
+
+### Plotting history for each country 
+
+```{r fig.height=4.5, fig.width=9, fig.align="center", message = F, warning = F}
+vd %>% 
+  filter(year > 1900) %>% 
+  ggplot(aes(x = year, y = v2x_polyarchy, 
+             group = country_name)) + 
+  geom_line(alpha = .5)
+```
+
+---
+
+### Plotting history for each country (2)
+
+```{r fig.height=4.5, fig.width=9, fig.align="center", message = F, warning = F}
+vd %>% 
+  filter(year > 1900) %>% 
+  ggplot(aes(x = year, y = v2x_polyarchy, 
+             group = country_name, 
+             col = factor(e_regionpol_6C))) + 
+  geom_line(alpha = .5) + 
+  labs(col = "Region")
+```
+
+---
+
+### Extract column summaries with `summarize()`
+
+```{r}
+vd %>% 
+  filter(year == 2015) %>% 
+  summarize(mean_poly = mean(v2x_polyarchy, na.rm = T),
+            mean_gdppc = mean(e_migdppc, na.rm = T)) #<<
+```
+
+--
+
+A "base `R`" alternative: 
+
+```{r}
+apply(vd[vd$year == 2015, c("v2x_polyarchy", "e_migdppc")],
+      2, mean, na.rm = T)
+```
+
+
+---
+
+### Grouped summaries
+
+```{r}
+vd %>% 
+  filter(year > 1900) %>% #<<
+  group_by(year) %>%  #<<
+  summarize(mean_poly = mean(v2x_polyarchy, na.rm = T),
+            mean_gdppc = mean(e_migdppc, na.rm = T))
+```
+
+---
+
+### Plotting grouped summaries 
+
+
+```{r fig.height=4.5, fig.width=9, fig.align="center"}
+vd %>% 
+  filter(year > 1900) %>% 
+  group_by(year) %>%
+  summarize(mean_poly = mean(v2x_polyarchy, na.rm = T),
+            mean_gdppc = mean(e_migdppc, na.rm = T)) %>% 
+  ggplot(aes(x = year, y = mean_poly)) +  #<<
+  geom_line()  #<<
+```
+
+
+---
+
+### Plotting grouped summaries (alternative approach)
+
+
+```{r fig.height=4.5, fig.width=9, fig.align="center", warning = F, message = F}
+vd %>% 
+  filter(year > 1900) %>% 
+  ggplot(aes(x = year, y = v2x_polyarchy)) +  #<<
+  geom_smooth(span = .5)  #<<
+```
+
+
+---
+
+
+### Plotting grouped summaries (3)
+
+
+```{r fig.height=4.5, fig.width=10.5, fig.align="center", warning = F}
+vd %>% 
+  filter(year > 1900) %>% 
+  group_by(year) %>%
+  summarize(mean_poly = mean(v2x_polyarchy, na.rm = T),
+            mean_gdppc = mean(e_migdppc, na.rm = T)) %>% 
+  mutate(my_size = 8*as.integer(year %in% c(1946, 1960, 1989, 2015))) %>% 
+  ggplot(aes(x = mean_gdppc, y = mean_poly)) +  #<<
+  geom_path() + 
+  geom_point() + 
+  geom_text(aes(label = year, size = my_size), show.legend=F)
+```
+
+
+---
+
+
+### Plotting grouped summaries (4)
+
+
+```{r fig.height=4.5, fig.width=9, fig.align="center", message = F}
+vd %>% 
+  filter(year > 1900) %>% 
+  group_by(year, e_regionpol_6C) %>% #<<
+  summarize(mean_poly = mean(v2x_polyarchy, na.rm = T),
+            mean_gdppc = mean(e_migdppc, na.rm = T)) %>% 
+  ggplot(aes(x = year, y = mean_poly, col = factor(e_regionpol_6C))) +  #<<
+  geom_line()
+```
+
+???
+
+1: Eastern Europe and Central Asia (including Mongolia and German Democratic Republic)
+2: Latin America and the Caribbean
+3: The Middle East and Northern Africa (including Israel and Turkey, excluding Cyprus)
+4: Sub-Saharan Africa
+5: Western Europe and North America (including Cyprus, Australia and New Zealand, but
+excluding German Democratic Republic)
+6: Asia and Pacific (excluding Australia and New Zealand; see 5)
+
+---
+class: inverse, middle, center
+
+# Reshaping data (`pivot_longer()`, `pivot_wider()`, joins)
+
+---
+
+
+# Structure of "tidy" data
+
+Observations in rows, each attribute has its own column
+
+Main task then is to tell `R` which columns should represent which attributes. 
+
+---
 
 <!-- ## Plan  -->
 
