--- a/slides/slides_11.Rmd
+++ b/slides/slides_11.Rmd
@@ -49,7 +49,7 @@ Foregrounding "data science" skills, causality.
 Which one is you? 
 
 1 Never done any programming
-1 Did some programming in another language (e.g. python, Stata)
+1 Did some programming in another language (e.g. Python, Stata)
 1 Some experience programming in `R`
 1 Experienced at programming in `R`
 
@@ -67,5 +67,21 @@ All welcome, but plan your work accordingly.
 - StackOverflow: our private one and "real" one
 - Lectures and labs
 
+---
+
+# Assignment for Thursday
+
+Attempt primers 1.1 and 1.2 on RStudio Cloud: 
+
+- "Data visualization basics" (https://rstudio.cloud/learn/primers/1.1)
+- "Programming basics" (https://rstudio.cloud/learn/primers/1.2)
+
+--
+
+To note: 
+
+- For beginners: these are not really sequential, so do 1.2 even if you are lost in 1.1
+- For non-beginners: if these are too basic, work on "Read For Data Science" (including exercises)
+- For experienced R programmers: if you already know R4DS, let's talk
 
 
