--- a/slides/slides_12.Rmd
+++ b/slides/slides_12.Rmd
@@ -356,6 +356,8 @@ Resources:
 - *R For Data Science*
 - RStudio primers
 - RStudio "Data Visualization" cheat sheet
+- Google
+- StackOverflow
 
 ---
 
@@ -382,45 +384,22 @@ Components of a `ggplot`:
 
 Next: getting data into the right format for plotting (and analysis).
 
-
-
 ---
 
 
-
-# Grammar of graphics 
-
-
-(no code yet)
----
+<!-- # Digression about coding vs clicking -->
 
 
-# Structure of "tidy" data
+<!-- --- -->
 
-Observations in rows, each attribute has its own column
+# Assignment
 
-Main task then is to tell `R` which columns should represent which attributes. 
+Before next lecture, RStudio Cloud primers: 
 
----
+- "Work with data" (https://rstudio.cloud/learn/primers/2): `tibble`, `select()`, `filter()`, `arrange()`, `%>%`, `summarize()`, `group_by()`, `mutate()`
+- "Data vizualization" (https://rstudio.cloud/learn/primers/3): more practice with `ggplot`
 
-
-
-# Getting data into `R` (and `RStudio`)
-
-An interaction option: `Import Dataset` button in `Environment` pane of `RStudio`
-
---
-
-But note it's showing you the code it's using! 
-
-(Live coding example.)
-
----
-
-# Digression about coding vs clicking
-
-
-
+Alternatively, Chapters 5&6 of R4DS. 
 
 
 
